k8s/resources.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-card-details
    release: monitoring
  name: api-card-details
spec:
  externalTrafficPolicy: Cluster
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: api-card-details
    release: monitoring
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-card-details
  labels:
    app: api-card-details
    release: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-card-details
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: api-card-details
        release: monitoring
    spec:
      containers:
        - name: api-card-details
          image: 514257451212.dkr.ecr.ap-south-1.amazonaws.com/api-card-details
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
          resources:
            requests:
              memory: 500Mi
              cpu: 300m
            limits:
              memory: 900Mi
              cpu: 500m
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
            failureThreshold: 6
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            failureThreshold: 6
            periodSeconds: 10            
            

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-card-details
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: acb9fbefecd34403a9d4b85d9d287409-1143412127.ap-south-1.elb.amazonaws.com
    http:
      paths:
      - path: /card-details
        pathType: Prefix
        backend:
          service:
            name: api-card-details
            port:
              number: 8080
